<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2013 Aubort Jean-Baptiste (Rorist)
Copyright (C) 2017 dns2utf8
Licensed under GNU's GPL 3, see README
-->
<resources>

    <string name="app_name">MyHackerspace</string>
    <string name="empty"></string>
    <string name="ok">OK</string>

    <string name="status_open">Open</string>
    <string name="status_closed">Closed</string>
    <string name="status_unknown">Unknown</string>

    <string name="ui_logo">Logo of the hackerspace</string>
    <string name="ui_name">FIXME</string>
    <string name="ui_url">https://fixme.ch</string>
    <string name="ui_image_status">Status image of the hackerspace</string>

    <string name="choose_hs">Choose a hackerspace</string>
    <string name="choose_time">Choose an update interval in minutes: </string>
    <string name="choose_time_default">30</string>
    <string name="choose_transparency">Widget\'s transparency</string>
    <string name="choose_text">Widget\'s text</string>

    <string name="btn_refresh">Refresh</string>
    <string name="btn_prefs">Preferences</string>

    <string name="msg_loading">Loading…</string>
    <string name="error_title">Error: </string>
    <string name="error_network_title">Network</string>
    <string name="error_network_msg">Network unreachable</string>
    <string name="error_generic">\n\nCheck that the current SpaceAPI conforms to the level it actually declares!\n\nSee https://spaceapi.io/</string>

    <string name="prefs_api_title">Edit SpaceAPI Directory URL</string>
    <string name="prefs_api_summary">URL for the global SpaceAPI directory to use (directory.json file).\nExamples:\nhttps://directory.spaceapi.io/</string>
    <string name="prefs_api_url_title">Edit SpaceAPI Endpoint URL</string>
    <string name="prefs_api_url_summary">Override current SpaceAPI endpoint URL (will be lost when choosing a hackerspace from the directory)</string>
    <string name="prefs_interval_title">Check interval</string>
    <string name="prefs_interval_summary">Interval in minutes to check the status in the widget</string>
    <string name="prefs_transparent_title">Show transparent background</string>
    <string name="prefs_transparent_summary">Widget\'s background will be transparent instead of gray</string>
    <string name="prefs_text_title">Show status text</string>
    <string name="prefs_text_summary">Add a text with the status under the widget</string>
    <string name="prefs_about_title">About This App</string>

    <string name="api_status">Status</string>
    <string name="api_lastchange">Last change: </string>
    <string name="api_duration">Duration: </string>
    <string name="api_duration_hours"> hour(s)</string>
    <string name="api_location">Location</string>
    <string name="api_postal_addr">Postal Address</string>
    <string name="api_coordinates">Coordinates</string>
    <string name="api_contact">Contact</string>
    <string name="api_webcams">Webcams</string>
    <string name="api_sensors">Sensors</string>
    <string name="api_sensors_environment">Environment</string>
    <string name="api_sensors_space">Space</string>
    <string name="api_sensors_organization">Organization</string>

    <string name="api_contact_phone">Phone</string>
    <string name="api_contact_sip" translatable="false">SIP</string>
    <string name="api_contact_irc" translatable="false">IRC</string>
    <string name="api_contact_twitter" translatable="false">Twitter</string>
    <string name="api_contact_mastodon" translatable="false">Mastodon</string>
    <string name="api_contact_facebook" translatable="false">Facebook</string>
    <string name="api_contact_identica" translatable="false">Identica</string>
    <string name="api_contact_foursquare" translatable="false">Foursquare</string>
    <string name="api_contact_email">Email</string>
    <string name="api_contact_ml">ML</string>
    <string name="api_contact_xmpp" translatable="false">XMPP</string>
    <string name="api_contact_gopher" translatable="false">Gopher</string>
    <string name="api_contact_matrix" translatable="false">Matrix</string>
    <string name="api_contact_mumble" translatable="false">Mumble</string>

    <string name="api_sensor_people_now_present">People Present</string>
    <string name="api_sensor_door_locked">Door Status</string>
    <string name="api_sensor_door_locked_yes">Locked</string>
    <string name="api_sensor_door_locked_no">Unlocked</string>
    <string name="api_sensor_beverage_supply">Beverage Supply</string>
    <string name="api_sensor_power_consumption">Power Consumption</string>
    <string name="api_sensor_network_connections">Network Connections</string>
    <string name="api_sensor_temperature">Temperature</string>
    <string name="api_sensor_humidity">Humidity</string>
    <string name="api_sensor_barometer">Air Pressure</string>
    <string name="api_sensor_wind">Wind</string>
    <string name="api_sensor_radiation">Radiation</string>
    <string name="api_sensor_total_member_count">Member Count</string>
    <string name="api_sensor_account_balance">Account Balance</string>


    <string name="about_version_title">App Version:</string>
    <string name="about_license_title">License:</string>
    <string name="about_license_text">GNU GENERAL PUBLIC LICENSE Version 3</string>
    <string name="about_visit_repository">Visit Repository</string>
    <string name="about_repository_url" translatable="false">https://github.com/spaceapi-community/my-hackerspace</string>
</resources>
