<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
<!--
 Copyright (C) 2012 Aubort Jean-Baptiste (Rorist)
 Licensed under GNU's GPL 3, see README
-->

    <PreferenceCategory android:title="SpaceAPI">

    </PreferenceCategory>
    <EditTextPreference
        android:key="api_endpoint"
        android:title="@string/prefs_api_title"
        android:summary="@string/prefs_api_summary"
        android:defaultValue="https://raw.githubusercontent.com/SpaceApi/directory/master/directory.json"
        android:inputType="textUri" />

    <EditTextPreference
        android:key="apiurl"
        android:title="@string/prefs_api_url_title"
        android:summary="@string/prefs_api_url_summary"
        android:defaultValue="https://fixme.ch/status.json"
        android:inputType="textUri" />

    <PreferenceCategory android:title="Widget">

    </PreferenceCategory>
    <CheckBoxPreference
        android:key="widget_transparency"
        android:title="@string/prefs_transparent_title"
        android:summary="@string/prefs_transparent_summary"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="widget_text"
        android:title="@string/prefs_text_title"
        android:summary="@string/prefs_text_summary"
        android:defaultValue="false" />
    <EditTextPreference
        android:key="check_interval"
        android:title="@string/prefs_interval_title"
        android:summary="@string/prefs_interval_summary"
        android:defaultValue="30"
        android:inputType="number" />

    <PreferenceCategory android:title="@string/prefs_about_title">
    </PreferenceCategory>

</PreferenceScreen>
