<?xml version="1.0" encoding="utf-8"?>
<io.spaceapi.community.myhackerspace.AboutLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/about_version_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_version_title" />

        <TextView
            android:id="@+id/about_version_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1.0.0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/about_license_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_license_title" />

        <TextView
            android:id="@+id/about_license_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/about_license_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/about_repository"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_repository_url" />

    <Button
        android:id="@+id/about_open_repo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_visit_repository" />

</io.spaceapi.community.myhackerspace.AboutLayout>