<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2013 Aubort Jean-Baptiste (Rorist)
    Licensed under GNU's GPL 3, see README
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_choose"
        android:icon="@drawable/ic_view_list_black_24dp"
        android:showAsAction="ifRoom|withText"
        android:title="@string/choose_hs"/>

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:showAsAction="ifRoom|withText"
        android:title="@string/btn_refresh"/>

    <item
        android:id="@+id/menu_prefs"
        android:icon="@drawable/ic_settings_black_24dp"
        android:showAsAction="ifRoom|withText"
        android:title="@string/btn_prefs"/>
</menu>
